<resources>
    <string name="app_name">In My Fridge</string>
    <string name="recipes">Recipes</string>
    <string name="recipeDetails">Recipe Details</string>
    <string name="searchRecipes">Search Recipes</string>
    <string name="initializing">Initializing…</string>
    <string name="splashImage">Splash screen image</string>
    <string name="servings">Servings</string>
    <string name="prep">Prep</string>
    <string name="total">Total</string>
    <string name="recipeImage">Recipe image</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="nutritionInfo">Nutrition Information</string>
    <string name="servingSize">Servings Size: 1 Serving</string>
    <string name="dailyValue">% DV</string>
    <string name="proteinPercent">% Protein</string>
    <string name="fatPercent">% Fat</string>
    <string name="carbsPercent">% Carbs</string>
    <string name="ingredientImage">Ingredient Image</string>
    <string name="missing">Missing</string>
    <string name="extras">Extras</string>
    <string name="minCalories">Min Calories</string>
    <string name="maxCalories">Max Calories</string>
    <string name="mainIngredient">MAIN INGREDIENT</string>
    <string name="cuisine">CUISINE</string>
    <string name="diet">DIET</string>
    <string name="mealType">MEAL TYPE</string>
    <string name="intolerances">INTOLERANCES</string>
    <string name="share">Share</string>
    <string name="problemOccured">Problem occurred</string>
    <string name="select">Select</string>
    <string name="noInternet">There is no internet connection.</string>
    <string name="noRecipeUrl">Recipe doesn\'t provide a url.</string>
    <string name="foodIsComing">Food is coming....</string>
    <string name="pleaseWait">Please wait</string>
    <string name="errorLoadingRecipe">Error loading recipe details</string>
    <string name="errorLoadingRecipeSummary">Error loading recipe summary</string>
    <string name="recipesNotFound">Recipes not found</string>
    <string name="min">min</string>
    <string name="share1">Share…</string>
    <string name="appID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="addUnitID">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="mainIngredientsArray">
        <item>Chicken</item>
        <item>Turkey</item>
        <item>Beef</item>
        <item>Pork</item>
        <item>Vegetables</item>
        <item>Beans</item>
        <item>Fruit</item>
        <item>Eggs</item>
        <item>Fish</item>
        <item>Rice</item>
        <item>Cheece</item>
    </string-array>

    <string-array name="intolerancesArray">
        <item>Dairy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Peanut</item>
        <item>Sesame</item>
        <item>Seafood</item>
        <item>Shellfish</item>
        <item>Soy</item>
        <item>Sulfite</item>
        <item>Wheat</item>
    </string-array>

    <string-array name="cuisinesArray">
        <item>Greek</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Vietnamese</item>
        <item>Thai</item>
        <item>Indian</item>
        <item>British</item>
        <item>French</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Spanish</item>
        <item>American</item>
        <item>German</item>
    </string-array>

    <string-array name="dietsArray">
        <item>Pescetarian</item>
        <item>Vegetarian</item>
        <item>Lacto Vegetarian</item>
        <item>Ovo Vegetarian</item>
        <item>Vegan</item>
        <item>Paleo</item>
        <item>Primal</item>
    </string-array>

    <string-array name="mailTypesArray">
        <item>Main course</item>
        <item>Side dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Drink</item>
    </string-array>

</resources>
